fix load on mobile

--- a/server/client/src/components/styles/content.scss
+++ b/server/client/src/components/styles/content.scss
@@ -2,7 +2,6 @@
 @import '../../styles/_mq';
 .content-container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   .header {
@@ -46,7 +45,7 @@
     // padding-top: 4px;
     // padding-bottom: 4px;
     justify-content: space-between;
-    height:100%;
+    
     .portfolio {
       width: 100%;
       box-sizing: border-box;
